--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <head>
-  <title>吃吃吃吃吃吃吃</title>
+  <title>东京炸鸡地图 | 東京炸鷄地圖</title>
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-    crossorigin=""
   />
-  <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
-  ></script>
+  <!-- Make sure load leaflet.js AFTER CSS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script>
+    var CENTER_LAT = 35.6825;
+    var CENTER_LON = 139.7241;
+  </script>
 </head>
 <body>
   <style>
-    html, body {
+    html,
+    body {
       height: 100%;
-      width:100%
+      width: 100%;
       margin: 0;
       padding: 0;
     }
@@ -28,13 +27,13 @@
     }
   </style>
   <div>
-    <p style="text-align: center; font-size: 2.5em;">
-        东京炸鸡地图 | 東京炸鷄地圖
+    <p style="text-align: center; font-size: 2.5em">
+      东京炸鸡地图 | 東京炸鷄地圖
     </p>
   </div>
   <div id="map"></div>
   <script>
-    var map = L.map("map").setView([35.6825, 139.7241], 13);
+    var map = L.map("map").setView([CENTER_LAT, CENTER_LON], 13);
     L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
       maxZoom: 19,
       attribution:
