--- a/index.html
+++ b/index.html
@@ -40,11 +40,34 @@
         '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
     }).addTo(map);
 
-    var circle = L.circle([35.42, 139.42], {
-      color: "red",
-      fillColor: "#f03",
-      fillOpacity: 0.5,
-      radius: 500,
-    }).addTo(map);
+    // Function to add circles to the map
+    function addCircles(data) {
+      data.IWANTTOEAT.forEach(function(item) {
+        var circle = L.circle(item.position, {
+          color: "red",
+          fillColor: "#f03",
+          fillOpacity: 0.5,
+          radius: 75
+        }).addTo(map);
+
+        var comment = item.comment.join("<br>");
+        var tags = item.tags;
+        var popupContent = `
+          <b>${tags[".brand"]}</b><br>
+          ${comment}<br>
+          <a href="${tags[".map_feature"][".google_url"]}" target="_blank">Google Maps</a><br>
+          Genre: ${tags[".genre"]}<br>
+          Language: ${tags[".language"]["zh"]}<br>
+          Flavor: ${tags[".flavor"].join(", ")}
+        `;
+        circle.bindPopup(popupContent);
+      });
+    }
+
+    // Fetch the JSON data and add circles
+    fetch('/data/chicken.json')
+      .then(response => response.json())
+      .then(data => addCircles(data))
+      .catch(error => console.error('Error fetching the data:', error));
   </script>
 </body>
