--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
         '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
     }).addTo(map);
 
-    // Function to add circles to the map
     function addCircles(data) {
-      data.IWANTTOEAT.forEach(function(item) {
+      data.IWANTTOEAT.forEach(function (item) {
         var circle = L.circle(item.position, {
           color: "red",
           fillColor: "#f03",
           fillOpacity: 0.5,
-          radius: 75
+          radius: 75,
         }).addTo(map);
 
         var comment = item.comment.join("<br>");
@@ -55,7 +54,9 @@
         var popupContent = `
           <b>${tags[".brand"]}</b><br>
           ${comment}<br>
-          <a href="${tags[".map_feature"][".google_url"]}" target="_blank">Google Maps</a><br>
+          <a href="${
+            tags[".map_feature"][".google_url"]
+          }" target="_blank">Google Maps</a><br>
           Genre: ${tags[".genre"]}<br>
           Language: ${tags[".language"]["zh"]}<br>
           Flavor: ${tags[".flavor"].join(", ")}
@@ -64,10 +65,30 @@
       });
     }
 
-    // Fetch the JSON data and add circles
-    fetch('/data/chicken.json')
-      .then(response => response.json())
-      .then(data => addCircles(data))
-      .catch(error => console.error('Error fetching the data:', error));
+    fetch("data/chicken.json")
+      .then((response) => {
+        if (!response.ok) {
+          throw new Error("Local file fetch failed");
+        }
+        return response.json();
+      })
+      .then((data) => addCircles(data))
+      .catch((error) => {
+        console.error("Error fetching the local data:", error);
+        // 如果本地加载失败，尝试加载远程资源
+        fetch(
+          "https://raw.githubusercontent.com/LaoshuBaby/tokyo-chickencutlet-map/refs/heads/main/data/chicken.json"
+        )
+          .then((response) => {
+            if (!response.ok) {
+              throw new Error("Remote file fetch failed");
+            }
+            return response.json();
+          })
+          .then((data) => addCircles(data))
+          .catch((error) =>
+            console.error("Error fetching the remote data:", error)
+          );
+      });
   </script>
 </body>
